@@ -1,3 +1,7 @@
+2006-06-24  Daniel Wagner  <wagi@monom.org>
+
+	* tests/streaming/Makefile.am: Fixed build problem with missing '/'.
+
 2006-06-10  Daniel Wagner  <wagi@monom.org>
 
 	* Changed building rules: No static sub libraries
